MCA-1032 implementing the route "create race track has prime image relationship"
