# specification/OpenAPI/more-cars.openapi.json
@@ -3158,6 +3158,59 @@
         }
       }
     },
+    "/race-tracks/{race-track-id}/has-prime-image/{image-id}": {
+      "post": {
+        "tags": [
+          "Race Tracks"
+        ],
+        "summary": "Creates a ›has-prime-image‹ relationship between the `Race Track` and the `Image`",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "race-track-id",
+            "description": "ID of the `Race Track`",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "in": "path",
+            "name": "image-id",
+            "description": "ID of the `Image`",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Relationship ›has-prime-image‹ between `Race Track` and `Image` successfully created.",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/RaceTrackHasPrimeImageResponse"
+                }
+              }
+            }
+          },
+          "304": {
+            "description": "The relationship ›has-prime-image‹ between `Race Track` and `Image` already exists."
+          },
+          "404": {
+            "description": "Request failed. `Race Track` and/or `Image` could not be found in the database.",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/track-layouts": {
       "get": {
         "tags": [
@@ -4770,6 +4823,56 @@
         "properties": {
           "data": {
             "$ref": "#/components/schemas/RaceTrackHasImage"
+          }
+        }
+      },
+      "RaceTrackHasPrimeImage": {
+        "type": "object",
+        "required": [],
+        "properties": {
+          "relationship_id": {
+            "type": "integer",
+            "readOnly": true,
+            "example": "123456"
+          },
+          "relationship_name": {
+            "type": "string",
+            "readOnly": true,
+            "example": "has-prime-image"
+          },
+          "relationship_partner": {
+            "type": "object",
+            "properties": {
+              "node_type": {
+                "type": "string",
+                "example": "image"
+              },
+              "data": {
+                "$ref": "#/components/schemas/Image"
+              }
+            }
+          },
+          "created_at": {
+            "type": "string",
+            "readOnly": true,
+            "description": "Timestamp for when this relationship was created. Generated by the system. Cannot be changed.",
+            "format": "date-time",
+            "example": "2025-05-14T11:05:07.793Z"
+          },
+          "updated_at": {
+            "type": "string",
+            "readOnly": true,
+            "description": "Timestamp for when this relationship was last modified. Generated by the system.",
+            "format": "date-time",
+            "example": "2025-05-14T11:05:07.793Z"
+          }
+        }
+      },
+      "RaceTrackHasPrimeImageResponse": {
+        "type": "object",
+        "properties": {
+          "data": {
+            "$ref": "#/components/schemas/RaceTrackHasPrimeImage"
           }
         }
       },
