# src/controllers/race-tracks/createHasPrimeImageRelation.ts
@@ -1,0 +1,33 @@
+import express from "express"
+import {RaceTrack} from "../../models/race-tracks/RaceTrack"
+import {marshalRelation} from "../relationships/marshalRelation"
+import {NodeTypeEnum} from "../nodes/types/NodeTypeEnum"
+import {NodeNotFoundError} from "../../models/types/NodeNotFoundError"
+import {RelationshipAlreadyExistsError} from "../../models/types/RelationshipAlreadyExistsError"
+
+import {sendResponse201} from "../responses/sendResponse201"
+import {sendResponse304} from "../responses/sendResponse304"
+import {sendResponse404} from "../responses/sendResponse404"
+import {sendResponse500} from "../responses/sendResponse500"
+
+export async function createHasPrimeImageRelation(req: express.Request, res: express.Response) {
+    const raceTrackId = parseInt(req.params.raceTrackId)
+    const imageId = parseInt(req.params.imageId)
+
+    try {
+        const relation = await RaceTrack.createHasPrimeImageRelationship(raceTrackId, imageId)
+        const marshalledData = marshalRelation(relation, NodeTypeEnum.IMAGE)
+
+        return sendResponse201(marshalledData, res)
+    } catch (e) {
+        if (e instanceof NodeNotFoundError) {
+            return sendResponse404(res)
+
+        } else if (e instanceof RelationshipAlreadyExistsError) {
+            return sendResponse304(res)
+        } else {
+            console.error(e)
+            return sendResponse500(res)
+        }
+    }
+}
