# src/db/types/DbRelationship.ts
@@ -24,4 +24,5 @@ export enum DbRelationship {
     CarModelHasPrimeImage = 'HAS_PRIME_IMAGE',
     RaceTrackHasLayout = 'HAS_LAYOUT',
     RaceTrackHasImage = 'HAS_IMAGE',
+    RaceTrackHasPrimeImage = 'HAS_PRIME_IMAGE',
 }
