# src/routes/race-tracks.ts
@@ -11,5 +11,6 @@ router.post('/race-tracks/:raceTrackId/has-layout/:trackLayoutId', RaceTrackCont
 router.get('/race-tracks/:raceTrackId/has-layout', RaceTrackController.getAllHasLayoutRelations)
 router.delete('/race-tracks/:raceTrackId/has-layout/:trackLayoutId', RaceTrackController.deleteHasLayoutRelation)
 router.post('/race-tracks/:raceTrackId/has-image/:imageId', RaceTrackController.createHasImageRelation)
+router.post('/race-tracks/:raceTrackId/has-prime-image/:imageId', RaceTrackController.createHasPrimeImageRelation)
 
 export default router
